--- a/app/src/main/res/layout/activity_a.xml
+++ b/app/src/main/res/layout/activity_a.xml
@@ -5,10 +5,11 @@
     android:layout_height="match_parent">
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/prepareOrder"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
+        android:onClick="prepareOrder"
         android:text="Button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
